--- a/angular.json
+++ b/angular.json
@@ -165,6 +165,9 @@
               "browserTarget": "resto:build:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
